--- a/ecclesia/lectio/mateo/mateo8.html
+++ b/ecclesia/lectio/mateo/mateo8.html
@@ -1812,8 +1812,13 @@
             <summary>Metanoia</summary>
             <ol>
               <li>La prueba es usada como medio de formación pedagógica</li>
-              <li>La revelación es progresiva, y así se va asimilando para ser bse de nuevos conocimientos</li>
-              <li>El Señor conoce el mejor momento para intervenir en el mundo</li>
+              <li>
+                La revelación es progresiva, y así se va asimilando para ser bse
+                de nuevos conocimientos
+              </li>
+              <li>
+                El Señor conoce el mejor momento para intervenir en el mundo
+              </li>
               <li>La prueba es ocasión de crecer en la fe</li>
               <li>La paz es don, la prueba lo muestra</li>
               <li></li>
@@ -1866,30 +1871,245 @@
         <li>
           <details class="select">
             <summary>Variaciones en el Texto</summary>
+            <h3>Vulgata</h3>
+            Et cum venisset trans fretum in regionem Gerasenorum,<br />
+            occurrerunt ei duo habentes daemonia, de monumentis exeuntes,<br />
+            tam dira ut nemo posset transire per viam illam.<br />
+            Et ecce clamaverunt dicentes: Quid nobis et tibi Iesu Fili Dei?<br />
+            venisti huc ante tempus torquere nos?<br />
+            Erat autem non longe ab illis grex porcorum multus pascens.<br />
+            Daemones autem rogabant eum dicentes: Si eicis nos, mitte nos in
+            gregem porcorum.<br />
+            Et ait illis: Ite.<br />
+            At illi exeuntes abierunt in porcos, et ecce in totum grex per
+            praeceps in mare ruit,<br />
+            et mortui sunt in aquis.<br />
+            Pastores autem fugerunt, et venientes in civitatem nuntiaverunt
+            omnia,<br />
+            et de his qui daemonia habuerant.<br />
+            Et ecce tota civitas exiit obviam Iesu et, viso eo,<br />
+            rogabant ut transiret a finibus eorum.<br />
+
+            <h3>Nueva Versión Internacional (NVI)</h3>
+            Cuando Jesús llegó a la otra orilla, a la región de los
+            gadarenos,<br />
+            salieron a su encuentro dos endemoniados que venían de los
+            sepulcros.<br />
+            Eran tan violentos que nadie se atrevía a pasar por aquel camino.<br />
+            —¿Qué quieres con nosotros, Hijo de Dios? —gritaron.<br />
+            —¿Has venido aquí para atormentarnos antes del tiempo señalado?<br />
+            A cierta distancia de ellos había una gran manada de cerdos
+            comiendo.<br />
+            Los demonios le rogaron a Jesús: —Si nos expulsas, mándanos a la
+            manada de cerdos.<br />
+            —Vayan —les dijo Jesús.<br />
+            Ellos salieron de los hombres y se metieron en los cerdos.<br />
+            Toda la manada se precipitó al lago por un despeñadero y murió en el
+            agua.<br />
+            Los que cuidaban los cerdos salieron corriendo y llegaron a la
+            ciudad.<br />
+            Contaron todo, incluso lo que les había pasado a los
+            endemoniados.<br />
+            Entonces toda la ciudad salió al encuentro de Jesús y, cuando lo
+            vieron,<br />
+            le rogaron que se fuera de su región.<br />
           </details>
         </li>
         <!-- +++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Paralelos</summary>
+            <h3>Textos paralelos de Mateo 8,28-34</h3>
+            Marcos 5,1-20 — Relato del endemoniado de Gerasa.<br />
+            Lucas 8,26-39 — Relato del endemoniado de Gerasa.<br />
+
+            <h3>Notas sobre las variaciones</h3>
+            En Mateo son <b>dos endemoniados</b>, mientras que en Marcos y Lucas
+            es <b>uno solo</b>.<br />
+            La región mencionada presenta variantes textuales: <i>gadarenos</i>,
+            <i>gerasenos</i>, o <i>gergesenos</i>, según manuscritos y
+            traducciones.<br />
+            El núcleo común es la liberación de los poseídos, la expulsión de
+            los demonios hacia los cerdos,<br />
+            la destrucción de estos en el agua y la reacción de los habitantes
+            que piden a Jesús que se retire.<br />
+
+            <h3>Temas paralelos</h3>
+            Jesús como vencedor del mal y del poder demoníaco.<br />
+            Liberación de quienes están esclavizados por fuerzas
+            destructivas.<br />
+            El contraste entre la salvación de personas y la pérdida económica
+            (los cerdos).<br />
+            El rechazo de Jesús por parte de la gente, pese al signo de
+            liberación.<br />
+            La misión de los liberados: en Marcos y Lucas, el endemoniado es
+            enviado a anunciar lo que Dios hizo con él.<br />
           </details>
         </li>
         <!-- +++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Temas</summary>
+            <h3>Temas teológicos principales en Mateo 8,28-34</h3>
+            <ol>
+              <li>
+                La autoridad de Jesús sobre el mal<br />
+                Jesús se muestra como el Hijo de Dios que domina a los demonios,
+                revelando su poder sobre el mundo espiritual.<br />
+              </li>
+              <li>
+                La identidad de Jesús como Hijo de Dios<br />
+                Los demonios reconocen explícitamente a Jesús como "Hijo de
+                Dios", subrayando una cristología alta desde el inicio del
+                Evangelio.<br />
+              </li>
+              <li>
+                La liberación integral del ser humano<br />
+                El encuentro muestra que la misión de Jesús es liberar a las
+                personas de lo que las oprime y deshumaniza.<br />
+              </li>
+              <li>
+                La tensión entre el valor de la persona y los bienes
+                materiales<br />
+                Los habitantes prefieren la pérdida de los cerdos como signo
+                negativo y rechazan a Jesús, mostrando cómo a veces se priorizan
+                intereses económicos sobre la salvación.<br />
+              </li>
+              <li>
+                La dimensión escatológica<br />
+                Los demonios mencionan "antes de tiempo", revelando la
+                conciencia de un juicio definitivo futuro y el inicio de la
+                victoria de Dios en el presente.<br />
+              </li>
+              <li>
+                La reacción humana ante lo divino<br />
+                En lugar de acoger la obra de Dios, la gente pide a Jesús que se
+                retire, reflejando la dureza del corazón y la dificultad para
+                aceptar la novedad del Reino.<br />
+              </li>
+            </ol>
           </details>
         </li>
         <!-- +++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Patrística</summary>
+            <h3>Interpretación patrística de Mateo 8,28-34</h3>
+            <ol>
+              <li>
+                Orígenes (Comentario al Evangelio de Mateo, XIII, 1)<br />
+                «Los demonios reconocen a Cristo mejor que muchos hombres, pues
+                confiesan al Hijo de Dios y temen el tormento eterno antes del
+                tiempo.»<br />
+                <i>(Origenes, Commentarium in Matthaeum, XIII, 1)</i><br />
+              </li>
+
+              <li>
+                San Juan Crisóstomo (Homilías sobre Mateo, Hom. 28,1)<br />
+                «Observa cómo los demonios proclaman lo que los fariseos callan:
+                llaman Hijo de Dios a Aquel a quien los hombres llaman solo hijo
+                de carpintero.»<br />
+                <i>(Homiliae in Matthaeum, Hom. 28,1)</i><br />
+              </li>
+
+              <li>
+                San Agustín (De Consensu Evangelistarum, II, 24)<br />
+                «Mateo habla de dos endemoniados, mientras que Marcos y Lucas
+                mencionan a uno. No hay contradicción, pues es posible que
+                hubiera dos, pero uno era más famoso y terrible, y por eso lo
+                destacaron.»<br />
+                <i>(De consensu evangelistarum II, 24)</i><br />
+              </li>
+
+              <li>
+                San Jerónimo (Comentario a Mateo, 2,8,28)<br />
+                «El hecho de que los demonios pidan entrar en los cerdos
+                manifiesta que no pueden dañar ni siquiera a los animales sin
+                permiso de Dios, y mucho menos al hombre, creado a imagen de
+                Dios.»<br />
+                <i>(Commentarii in Matthaeum, 2,8,28)</i><br />
+              </li>
+
+              <li>
+                San Hilario de Poitiers (Comentario a Mateo, cap. 8)<br />
+                «Los gerasenos, al pedir a Cristo que se aleje, muestran el
+                rechazo del mundo a la presencia del Señor, porque no soportan
+                perder sus ganancias terrenas por el bien de la salvación.»<br />
+                <i>(In Matthaeum, cap. 8)</i><br />
+              </li>
+            </ol>
+            <p>
+              Estas citas muestran tres grandes líneas patrísticas:<br />
+              Cristología (Jesús como Hijo de Dios reconocido por los
+              demonios).<br />
+              Exégesis de las diferencias sinópticas (Agustín).<br />
+              Visión espiritual y moral (el rechazo de Cristo por intereses
+              terrenos).
+            </p>
           </details>
         </li>
         <!-- +++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Magisterio</summary>
+            <h3>El Magisterio de la Iglesia y Mateo 8,28-34</h3>
+            <ol>
+              <li>
+                Autoridad de Cristo sobre los demonios<br />
+                «La venida de Cristo, el Hijo de Dios, destruyó las obras del
+                diablo» (1 Jn 3,8).<br />
+                «La vida de Cristo es misterio de “recapitulación”: todo lo que
+                Jesús hizo, dijo y sufrió tenía como fin restablecer al hombre
+                en su vocación primera» (Catecismo de la Iglesia Católica, n.
+                518).<br />
+                «Los exorcismos de Jesús manifiestan que su reino es el Reino de
+                Dios; Él vence al “fuerte” y recobra lo que le pertenece» (CIC,
+                n. 550).<br />
+              </li>
+
+              <li>
+                La realidad del demonio y la liberación cristiana<br />
+                «El poder de Satanás no es infinito. No puede impedir la
+                edificación del Reino de Dios» (CIC, n. 395).<br />
+                «Los exorcismos de Jesús liberan a los hombres del dominio de
+                los demonios» (CIC, n. 1673).<br />
+              </li>
+
+              <li>
+                El valor de la persona humana sobre los bienes materiales<br />
+                «El hombre es el único ser sobre la tierra que Dios ha querido
+                por sí mismo» (Gaudium et Spes, n. 24).<br />
+                «El bien de la persona humana tiene primacía sobre los bienes
+                materiales» (Compendio de la Doctrina Social de la Iglesia, n.
+                132).<br />
+              </li>
+
+              <li>
+                La misión de anunciar las obras de Dios<br />
+                «Todos los fieles cristianos están llamados a anunciar con la
+                palabra y con la vida la buena nueva de la victoria de Cristo
+                sobre el pecado y la muerte» (Evangelii Nuntiandi, n. 2).<br />
+                «La misión de la Iglesia es continuar y prolongar la misión de
+                Cristo: anunciar y realizar la liberación integral del hombre»
+                (Redemptoris Missio, n. 11).<br />
+              </li>
+
+              <li>
+                La libertad humana frente a la gracia<br />
+                «Dios creó al hombre como un ser racional, confiriéndole la
+                dignidad de una persona dotada de iniciativa y de dominio de sus
+                actos» (CIC, n. 1730).<br />
+                «Jesús invita a todos a acoger el Reino, pero algunos lo
+                rechazan por intereses terrenos» (CIC, n. 543).<br />
+              </li>
+              <p>
+                el Magisterio conecta la perícopa con:<br />
+                Cristo vencedor del mal,<br />
+                la dignidad y libertad del hombre,<br />
+                la prioridad de la persona sobre lo material,<br />
+                y la misión evangelizadora de los liberados.
+              </p>
+            </ol>
           </details>
         </li>
         <!-- +++++++++++++++ -->
@@ -1897,9 +2117,28 @@
           <details class="select">
             <summary>Metanoia</summary>
             <ol>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>
+                La liberación del poder del mal, es una Gracia, que puede ser
+                tomada como un mal para quien vive con esa desgracia
+              </li>
+              <li>
+                La permanente actitud del bien, que incluye liberar del mal
+              </li>
+              <li>
+                El bien no solo es un signo para quien lo recibe sino para todas
+                las personas, incluye a quienes como yo, me entero muchos años
+                después
+              </li>
+              <li>Las tensiones entre lo material y lo espiritual</li>
+              <li>
+                Los signos tanto de lo material y lo espiritual son claros, la
+                eleccón del mal, tiene un transfondo de deseo del bien [evitar
+                pérdidas económicas]
+              </li>
+              <li>
+                Es un llamado a una clara jerarquía de valores, lo humano sobre
+                lo económico
+              </li>
               <li></li>
             </ol>
           </details>
