--- a/ecclesia/oracion/CastilloInterior.html
+++ b/ecclesia/oracion/CastilloInterior.html
@@ -923,6 +923,7 @@ Aprender a hacer su Voluntad<br><br>
             <li>Es decir, viviendo solo para Dios</li>
             <li>Solo seremos felices si hacemos lo que amamos, y estamos con quien amamos. El signo del amor es la alegría, la gratitud y la gratuidad.</li>
             <LI>Agregar a la oración la meditación <br>Al Silencio la Soledad<br></LI>
+            <li>Agregar orden y método en todo, lo primero es identificar los actos que se repiten [la esencia del proceso, su fin, sus objetivos o fases] </li>
           </ol>
         </details></li>
         <!-- ++++++++++++++++++++++++++++++ -->
