--- a/ecclesia/oracion/index.html
+++ b/ecclesia/oracion/index.html
@@ -32,6 +32,8 @@
           <h3 class="cita">Católicas</h3>
            <li class="li"><a href="../oracion/rosario.html">ROSARIO</a></li>
            <li class="li"><a href="../oracion/viaCrucIs.html">VIA CRUCIS</a></li>
+           <li class="li"><a href="../../media/latin/CRUX SACRA.mp3">ORACIÓN DE SAN BENITO</a></li>
+           <li class="li"><a href=""></a></li>
 
            <h3 class="cita">Teresa de Jesús</h3>
            <li class="li"><a href="../oracion/CastilloInterior.html">LAS MORADAS</a></li>
