--- a/ecclesia/discretio/index.html
+++ b/ecclesia/discretio/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="../../styles/style.css">
   <title>Discretio</title>
 </head>
 <body>
@@ -12,12 +12,12 @@
       <div class="container">
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
-        <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-        <a href="../index.html" class="nombre">INICIO </a>
+        <a href="#alInicio"><img src="../../media/ESCUDOCARM.png" alt="" class="logoC"></a>
+        <a href="../../index.html" class="nombre">INICIO </a>
       </div>
     </header> <br><br>
     <!-- ****************************************************************** -->
-<h1 class="init">Discernimiento</h1>
+<h1 class="init">Discernimiento de <br>Ignacio de Loyola</h1>
   <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
       <br>EDITH STEIN</h3>
 
