--- a/ecclesia/oracion/CastilloInterior.html
+++ b/ecclesia/oracion/CastilloInterior.html
@@ -918,12 +918,23 @@ Aprender a hacer su Voluntad<br><br>
               </li>
           </ol>
         <ol>
+          <li>GRATIA: identificar la Gracia ofrecida, disponerse para acogerla, discernirla, comprenderla y expresarla con palabras y la vida propia.</li>
+          <li>CONVERSIO: Agregar a la oración la meditación y Añadir al silencio la soledad, <br> RECORDAR QUE: Sin experiencia es imposible comprender</li>
+          <li>DISCERNIMENTUM: Toda tentación es vencida por el amor, todo momento de desolación nos invita a amar. Por eso dirá Sta. Teresa, lo que más los mueva a amar eso hemos de hacer- siempre la desolación es la gracia del llamado a amar más y mejor. <BR></BR>
+El enemigo nos dará cien verdades si nos puede hacer creer una sola mentira.</li>
             <li>Todo lo que me mueva a amar es lo que debo hacer</li>
             <li>Se pasa a la siguiente morada, profundizando las Gracias anteriores y Poniendo como meta Dios y hacer su Voluntad</li>
             <li>Es decir, viviendo solo para Dios</li>
             <li>Solo seremos felices si hacemos lo que amamos, y estamos con quien amamos. El signo del amor es la alegría, la gratitud y la gratuidad.</li>
             <LI>Agregar a la oración la meditación <br>Al Silencio la Soledad<br></LI>
             <li>Agregar orden y método en todo, lo primero es identificar los actos que se repiten [la esencia del proceso, su fin, sus objetivos o fases] </li>
+            <li>Revisar cada morada y anotar como  cada estadío va evolucionando en cada morada </li>
+            <li>Lo central en cada acción, y la tarea de esta morada será: <br>
+            Aprender a conocer al Señor <br>
+            Aprender a aprender [Orden y Método] <br>
+            Aprender a hacer su Voluntad
+            </li>
+            <li></li>
           </ol>
         </details></li>
         <!-- ++++++++++++++++++++++++++++++ -->
