--- a/indiceGeneral.html
+++ b/indiceGeneral.html
@@ -52,6 +52,8 @@
           <li class="li"><a href="./ciencias/index.html">CIENCIAS </a></li>
           <li class="li"><a href="./ecclesia/musica/index.html">MÚSICA</a></li>
           <li class="li"><a href="./programacion/index.html">PROGRAMACIÓN</a></li>
+          <h2>PROGRESSUS</h2>
+          <li class="li"><a href="./ciencias/PROGRESSUS/studia.html">MÉTODO DE ESTUDIOS</a></li>
           <li class="li"><a href="#1">HORARIO</a></li>
           <li class="li"><a href="#8"></a></li>
         </ol>
