--- a/ciencias/PROGRESSUS/studia.html
+++ b/ciencias/PROGRESSUS/studia.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/style.css" />
-    <title>LECTIO MATEO</title>
+    <link rel="stylesheet" href="../../styles/style.css" />
+    <title>METHODUS</title>
   </head>
   <body>
     <p id="alInicio" class="principio"></p>
@@ -13,7 +13,7 @@
         <p class="logo">CRISTO SALVADOR</p>
         <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
         <a href="#alInicio">
-          <img src="../media/ESCUDOCARM.png" alt="" class="logoC" />
+          <img src="../../media/ESCUDOCARM.png" alt="" class="logoC" />
         </a>
         <a href="./index.html" class="nombre">INICIO</a>
       </div>
@@ -21,7 +21,7 @@
     <br />
     <br />
     <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
-    <h1 class="init"></h1>
+    <h1 class="init">METHODUS</h1>
     <h3 class="cita">
       "No aceptes como Verdad lo que no proviene del Amor,
       <br />
@@ -37,47 +37,142 @@
       <h1></h1>
       <div>
         <ol>
-          li.li*7>a[href="#$"]
+          <li class="li"><a href="#1">DISCERE</a></li>
+          <li class="li"><a href="#2"></a></li>
+          <li class="li"><a href="#3"></a></li>
+          <li class="li"><a href="#4"></a></li>
+          <li class="li"><a href="#5"></a></li>
+          <li class="li"><a href="#6"></a></li>
+          <li class="li"><a href="#7"></a></li>
         </ol>
       </div>
     </section>
     <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section id="1">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">DISCERE</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
-            <summary></summary>
-            <p></p>
+            <summary>Preparación </summary>
+            <p>Toda actividad necesita cierto entorno que facilite el aprendizaje</p>
+            <ol>
+                <li>El objetivo
+                    <ul>
+                        <li>Metas claras</li>
+                        <li>Objetivos realistas</li>
+                        <li>tiempos: 1 mes, 6 meses, un año</li>
+                        <p>dependiendo de la materia puede variar la escala de tiempo, pero es bueno mantener unos de corto plazo, otros de mediano y largo plazo</p>
+                        <li></li>
+                    </ul>
+                </li>
+                <li>El lugar</li>
+                <li>La actitud </li>
+                <li>Elementos necesarios</li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
-            <summary></summary>
-            <p></p>
+            <summary>Aprender</summary>
+            <ol>
+            <li>contacto: leer, si se trata de un libro</li>
+            <p>La mejor manera de aprender incluye la práctica. Usar la técnica de estudiar 25 minutos y descansar 5 minutos, en general se puede usar un porcentaje de tiempo para el estudio, otro para la practica y otro para el descanso, el orden puede variar de acuerdo a la materia</p>
+                <li>Buscar las mejores fuentes : videos, música, libros, blogs etc</li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
-            <summary></summary>
-            <p></p>
+            <summary>Meditación </summary>       
+             <p>El aprendizaje incluye la retención de información y la construcción de un esquema lógico del proceso. Y fundamentalmente el desarrollo de habilidades, por ejemplo en el aprendizaje de un idioma: <br>Comprensión oral: escuchar y entender. <br>
+Expresión oral: hablar con fluidez y precisión.<br>
+Comprensión escrita: leer con comprensión.<br>
+Expresión escrita: escribir con claridad.<br>
+</
+            <ol>
+                <li>Si es un texto, que comunica</li>
+                <li>Si es una persona, que dice y que quiere comunicar</li>
+                <li>encontrar los patrones del lenguaje y formulas frecuentes de Expresión </li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
-            <summary></summary>
-            <p></p>
+            <summary>Practicar</summary>
+            <p>El aprendizaje requiere de poner en acción lo aprendido, no solo porque lo fija en la mente, sino porque también lo lleva al siguiente nivel</p>
+            <ol>
+                <li>Explicar el tema con las propias palabras </li>
+                <li>Resolver ejercicios, preguntas o casos practicos</li>
+                <li>Anotar las preguntas recurrentes o las más importantes</li>
+                <li>Inmerción contextualizada, si se trata de aprender un idioma acudir a contextos reales: pedir la comida, saludar, preguntar etc.</li>
+                <li>Prioriza la capacidad de comunicarse sobre la precisión gramatical al principio.</li>
+                <li>Siempre en todo la busqueda de herramientas que optimicen el aprendizaje es fundamental</li>
+                <li>	Aprendizaje gramatical cuando sea necesario para entender o expresarte, pero no te obsesiones con reglas de memoria.</li>
+                <li>Sesiones cortas y diarias (15–30 minutos) suelen ser más efectivas que sesiones largas esporádicas.
+•	Queda con el idioma a través de tus intereses: series, cocina, deporte, tecnología.
+</li>
+                <li>No depender de la traducción: intenta pensar directo en el idioma objetivo.	<br>
+Graba tu voz: escucha tus propias grabaciones para identificar errores de pronunciación y entonación.	<br>
+Errores comunes: obsesionarte con la gramática al inicio; es mejor hablar con errores que no hablar nada.	<br>
+Diversidad de recursos: usa podcasts, videos, libros, apps, y conversaciones reales para evitar el aburrimiento.	<br>
+Mantén una actitud de curiosidad: aprende vocabulario relacionado con tus intereses para mayor motivación.	<br>
+</li>
+                <li></li>
+                <li></li>
+            </ol>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
-            <summary></summary>
-            <p></p>
+            <summary>Asentar</summary>
+            <p>Fijar enla memoria de largo plazo</p>
+            <ol>
+                <h4>Repaso despuésde:</h4>
+                <li>10 minutos</li>
+                <li>1 día</li>
+                <li>1 semana</li>
+                <li>1 mes</li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
+            <p>Plan de 8 semanas<br>
+<h4>Semanas 1–2: Fundamentos y exposición</h4>	<br>
+15–20 minutos diarios de escucha simple (podcast para principiantes, canciones).	<br>
+15 minutos diarios de lectura adaptada o artículos cortos.	<br>
+2–3 sesiones semanales de 20–30 minutos de conversación con un compañero o tutor.	<br>
+Crea un pequeño glosario de 100 palabras/expresiones útiles.	<br>
+<h4>Semanas 3–4:</h4> Interacciones más activas	<br>
+Aumenta a 3–4 sesiones de speaking/escucha.	<br>
+Practica frases clave para situaciones cotidianas.	<br>
+Empieza a escribir 1 párrafo corto al día (diario, reseña).	<br>
+Introduce tarjetas SRS para vocabulario nuevo.	<br>
+<h4>Semanas 5–6:</h4> Ampliación de contenido y complejidad	<br>
+Ve videos o series con subtítulos en el idioma objetivo.	<br>
+Participa en foros o comunidades en línea del idioma.	<br>
+Toma notas de 5–6 frases útiles y úsarlas en ejercicios de speaking.	<br>
+<h4>Semanas 7–8:</h4> Consolidación y revisión	<br>
+Realiza una simulación de conversación de 10–15 minutos sobre temas variados.	<br>
+Revisa vocabulario clave y estructuras gramaticales.	<br>
+Evalúa progreso y ajusta metas.	<br>
+</p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
