--- a/ecclesia/oracion/rosario.html
+++ b/ecclesia/oracion/rosario.html
@@ -43,7 +43,9 @@
           <li class="li"><a href="#4">MISTERIOS LUMINOSOS J</a></li>
           <li class="li"><a href="#5">EL GLORIA</a></li>
           <li class="li"><a href="#6">LAS LETANÍAS</a></li>
-          <li class="li"><a href="#7"></a></li>
+          <li class="li"><a href="#7">EL CREDO</a></li>
+          <li class="li"><a href="#"></a></li>
+          <li class="li"><a href="#"></a></li>
         </ol>
       </div>
     </section>
@@ -743,12 +745,275 @@
     </section>
     <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section id="7">
+      <h2 class="subtitulo">CREDO</h2>
+      <!-- /////////////////////////////////////// -->
+      <ol>
+        <li>
+          <details class="select">
+            <summary>NICENO CONSTANTINOPOLITANO-LATÍN</summary>
+            <p>Credo in unum Deum,  	<br>
+Patrem omnipoténtem,  	<br>
+Factórem caeli et terrae,  	<br>
+visibílium ómnium et invisibílium.  	<br>
+	<br>
+Et in unum Dóminum Iesum Christum, <br>
+ Fílium Dei Unigénitum,  	<br>
+et ex Patre natum ante ómnia sæcula.  	<br>
+Deum de Deo, lumen de lúmine,  Deum verum de Deo vero,  	<br>
+génitum, non factum,  	<br>
+consubstantiálem Patri:  	<br>
+per quem ómnia facta sunt.  	<br>
+	<br>
+Qui propter nos hómines  	<br>
+et propter nostram salútem  	<br>
+descéndit de cælis.  	<br>
+	<br>
+Et incarnátus est de Spíritu Sancto  	<br>
+ex María Vírgine, et homo factus est.  	<br><br>
+Crucifíxus étiam pro nobis:  	<br>
+sub Póntio Piláto passus, et sepúltus est.  	<br>
+Et resurréxit tértia die,  	<br>
+secúndum Scriptúras.  	<br>
+Et ascéndit in cælum,  	<br>
+sedet ad déxteram Patris.  	<br>
+Et íterum ventúrus est cum glória  	<br>
+iudicáre vivos et mórtuos:  	<br>
+cuius regni non erit finis.  	<br>
+	<br>
+Et in Spíritum Sanctum,  	<br>
+Dóminum et vivificántem,  	<br>
+qui ex Patre Filióque procédit;  	<br>
+qui cum Patre et Fílio  	<br>
+simul adorátur et conglorificátur;  	<br>
+qui locútus est per prophétas.  	<br>
+	<br>
+Et unam, sanctam, cathólicam et apostólicam Ecclésiam.  	<br>
+Confíteor unum baptísma  	<br>
+in remissiónem peccatórum.  	<br>
+Et exspécto resurrectiónem mortuórum,  	<br>
+et vitam ventúri saeculi.  	<br>
+	<br>
+Amen.  	<br>
+</p>
+<p><A>https://www.youtube.com/watch?v=AMrHjwbSm2w</A>LINK</p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary>CREDO NICENO EN ESPAÑOL</summary>
+            <p>Creo en un solo Dios,	<br>
+Padre todopoderoso,	<br>
+creador del cielo y de la tierra,	<br>
+de todo lo visible y lo invisible.	<br>
+	<br>
+Creo en un solo Señor, Jesucristo,	<br>
+Hijo único de Dios,	<br>
+nacido del Padre antes de todos los siglos:	<br>
+Dios de Dios, Luz de Luz, Dios verdadero de Dios verdadero,	<br>
+engendrado, no creado, de la misma naturaleza del Padre,	<br>
+por quien todo fue hecho;	<br>
+	<br>
+que por nosotros, los hombres,	<br>
+y por nuestra salvación bajó del cielo,	<br>
+y por obra del Espíritu Santo se encarnó	<br>
+de María, la Virgen, y se hizo hombre;	<br>
+	<br>
+y por nuestra causa fue crucificado	<br>
+en tiempos de Poncio Pilato;	<br>
+padeció y fue sepultado,	<br>
+y resucitó al tercer día, según las Escrituras,	<br>
+y subió al cielo,	<br>
+y está sentado a la derecha del Padre;	<br>
+	<br>
+y de nuevo vendrá con gloria	<br>
+para juzgar a vivos y muertos,	<br>
+y su reino no tendrá fin.	<br>
+	<br>
+Creo en el Espíritu Santo, Señor y dador de vida,	<br>
+que procede del Padre y del Hijo,	<br>
+que con el Padre y el Hijo	<br>
+recibe una misma adoración y gloria,	<br>
+y que habló por los profetas.	<br>
+	<br>
+Creo en la Iglesia, que es una, santa,	<br>
+católica y apostólica.	<br>
+Confieso que hay un solo bautismo	<br>
+para el perdón de los pecados.	<br>
+Espero la resurrección de los muertos	<br>
+y la vida del mundo futuro.	<br>
+	<br>
+Amén.	<br>
+</p>
+<p><a href="https://www.youtube.com/watch?v=MjFaN21r-hU">LINK </a></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary>SIMBOLO DE LOS APOSTÓLES LATÍN </summary>
+            <p>Credo in Deum Patrem omnipoténtem,	<br>
+Creatórem cæli et terræ.	<br>
+	<br>
+Et in Iesum Christum, Fílium eius unicum,	<br>
+Dóminum nostrum,	<br>
+qui concéptus est de Spíritu Sancto,	<br>
+natus ex María Vírgine,	<br>
+	<br>
+passus sub Póntio Piláto,	<br>
+crucifíxus, mórtuus, et sepúltus;	<br>
+descéndit ad ínferos;	<br>
+tértia die resurréxit a mórtuis;	<br>
+ascéndit ad cælos,	<br>
+sedet ad déxteram Dei Patris omnipoténtis;	<br>
+inde ventúrus est iudicáre vivos et mórtuos.	<br>
+	<br>
+Credo in Spíritum Sanctum,	<br>
+sanctam Ecclésiam cathólicam,	<br>
+sanctórum communiónem,	<br>
+remissiónem peccatórum,	<br>
+carnis resurrectiónem,	<br>
+vitam ætérnam.	<br>
+	<br>
+Amen.	<br>
+</p>
+<p><a href="https://www.youtube.com/watch?v=IvzMBhW0VJE">link</a></p>
+
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary>SIMBOLO DE LOS APOSTÓLES ESPAÑOL</summary>
+            <p>Creo en Dios, Padre todopoderoso,	<br>
+creador del cielo y de la tierra.	<br>
+	<br>
+Creo en Jesucristo, su único Hijo, nuestro Señor,	<br>
+que fue concebido por obra y gracia del Espíritu Santo,	<br>
+nació de Santa María Virgen,	<br><br>
+padeció bajo el poder de Poncio Pilato,	<br>
+fue crucificado, muerto y sepultado,	<br>
+descendió a los infiernos,	<br>
+al tercer día resucitó de entre los muertos,	<br>
+subió a los cielos	<br>
+y está sentado a la derecha de Dios, Padre todopoderoso.	<br>
+Desde allí ha de venir a juzgar a vivos y muertos.	<br>
+	<br>
+Creo en el Espíritu Santo,	<br>
+la santa Iglesia católica,	<br>
+la comunión de los santos,	<br>
+el perdón de los pecados,	<br>
+la resurrección de la carne	<br>
+y la vida eterna.	<br>
+	<br>
+Amén.	<br>
+</p><p><p><a href="https://www.youtube.com/watch?v=IvzMBhW0VJE">link latin - Español</a></p></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+      </ol>
+      <!-- ////////////////////////////////// -->
+    </section>
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+    <section id="">
       <h2 class="subtitulo"></h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
             <summary></summary>
+            <p></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p></p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+      </ol>
+      <!-- ////////////////////////////////// -->
+    </section>
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+    <section id="">
+      <h2 class="subtitulo">CREDO</h2>
+      <!-- /////////////////////////////////////// -->
+      <ol>
+        <li>
+          <details class="select">
+            <summary>NICENO CONSTANTINOPOLITANO</summary>
             <p></p>
           </details>
         </li>
