--- a/ecclesia/lectio/mateo/mateo9.html
+++ b/ecclesia/lectio/mateo/mateo9.html
@@ -598,9 +598,15 @@
           <details class="select">
             <summary>Metanoia</summary>
             <ol>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>La llamada y la elección de seguir el llamado</li>
+              <li>El llamado es una Gracia Universal a la salvación</li>
+              <li>El resultado es la transformación de la vida.</li>
+              <li>Ser discípulo consiste esencialmente en seguir a Jesús</li>
+              <li>La radicalidad de la respuesta, y su inmediatez</li>
+              <li>
+                "Al que ve como publicano y pecador, lo elige para apóstol, para
+                que nadie desespere de la salvación". San Jerónimo
+              </li>
               <li></li>
             </ol>
           </details>
@@ -642,30 +648,114 @@
         <li>
           <details class="select">
             <summary>Variaciones en el Texto</summary>
+            <p>Al comparar distintas traducciones (Jerusalén, Vulgata, NVI, Biblia de las Américas), se observan algunas diferencias en estilo, en elección léxica y en cómo se interpretan ciertos términos del griego original. Algunas de las diferencias habituales:	<br>
+En la Biblia de Jerusalén: “sucedió que estando él a la mesa en casa de Mateo…” “publicanos y pecadores”. 	<br>
+En la NVI: “Mientras Jesús estaba a la mesa en casa de Mateo, muchos recaudadores de impuestos y pecadores llegaron…” 	<br>
+En la Vulgata latina (traducida del latín de Jerónimo) puede ofrecer diferencias en orden de las frases o en matices latinos tradicionales; esas diferencias no las tengo íntegramente aquí, pero suelen reflejar interpretaciones teológicas latinas.	<br>
+</p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Paralelos</summary>
-          </details>
+            <p>•  Mateo 9,10-13 coincide con Lucas 5,29-32 / 5,30-32 en cuanto al banquete, la crítica de los fariseos y la frase “no he venido a llamar a justos, sino a pecadores a arrepentimiento”. 
+<br>
+•  También con Marcos 2,13-17 hay paralelismo: en Marcos se narra la llamada de Leví (Mateo), el banquete, la objeción de los fariseos y la respuesta de Jesús (“los sanos no necesitan médico, sino los enfermos”). 
+<br>
+•  En Lucas la frase “pecadores al arrepentimiento”  aparece explícitamente en Lucas 5,32, lo que es paralelo al final de Mateo 9,13. 
+<br>
+•  Vale notar que Lucas omite o adapta algunos matices del texto mateano, pero el núcleo narrativo es muy parecido. 
+<br>
+</p>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Temas</summary>
+            <strong>Temas teológicos de Mateo 9,10-13</strong><br><br>
+
+<ol>
+  <li><b>La llamada universal a la salvación:</b> Jesús se acerca a los pecadores y marginados, mostrando que el Reino de Dios está abierto a todos, sin exclusiones.<br></li>
+
+  <li><b>La misericordia como corazón del Evangelio:</b> La cita de Oseas 6,6 (“Misericordia quiero y no sacrificios”) revela que la relación con Dios se funda en el amor compasivo, no en el mero cumplimiento ritual.<br></li>
+
+  <li><b>Jesús como médico de los pecadores:</b> La imagen del médico muestra que Cristo no condena, sino que sana el corazón humano herido por el pecado.<br></li>
+
+  <li><b>El verdadero discipulado:</b> La respuesta inmediata de Mateo a la llamada de Jesús expresa que seguirle implica una conversión radical y una apertura total a su persona.<br></li>
+
+  <li><b>Contraste entre justicia legalista y misericordia divina:</b> Los fariseos representan una religión centrada en normas, mientras que Jesús revela una justicia superior que nace del amor y del perdón.<br></li>
+
+  <li><b>La revelación del rostro de Dios:</b> En las palabras y acciones de Jesús se manifiesta el Dios que sale al encuentro del hombre, incluso en su pecado, para invitarlo a la comunión.<br></li>
+</ol>
+
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Patrística</summary>
+            <strong>Padres de la Iglesia sobre Mateo 9,10-13</strong><br><br>
+
+<ol>
+  <li><b>San Juan Crisóstomo (Homilías sobre Mateo, Hom. 30,1):</b><br>
+  “Jesús, al sentarse a la mesa con publicanos y pecadores, no se manchaba con ellos, sino que los limpiaba con su presencia.<br>
+  Así como el médico no se contamina al tocar al enfermo, sino que el enfermo recibe la salud del médico, así Cristo cura con su misericordia a los que se acercan a Él”.<br></li>
+
+  <li><b>San Jerónimo (Comentario al Evangelio de Mateo, 9,10):</b><br>
+  “Mateo, al ser llamado, deja su mesa de impuestos y prepara otra mesa más noble: aquella en la que Cristo se sienta con los pecadores.<br>
+  El mismo que antes cobraba lo ajeno, ahora reparte los bienes del cielo”.<br></li>
+
+  <li><b>San Agustín (Sermón 30,2):</b><br>
+  “El Señor vio al publicano y lo miró con misericordia, y al mirarlo lo eligió, y al elegirlo lo transformó.<br>
+  No vino a llamar a los justos, porque no hay justos sin Él; vino a llamar a los pecadores, porque sólo Él puede hacerlos justos”.<br></li>
+
+  <li><b>Orígenes (Comentario a Mateo, 6,6):</b><br>
+  “Cristo se sienta a la mesa con los pecadores porque su alimento es la conversión del alma humana.<br>
+  Él come cuando el hombre se arrepiente, porque entonces se cumple la voluntad del Padre que quiere que todos se salven”.<br></li>
+
+  <li><b>San Beda el Venerable (Homilías sobre los Evangelios, I,21):</b><br>
+  “El Señor no desdeña a los pecadores, sino que los atrae con ternura.<br>
+  Al citar Oseas: ‘Misericordia quiero y no sacrificio’, muestra que el culto más agradable a Dios es el amor que busca salvar al hermano”.<br></li>
+</ol>
+
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Magisterio</summary>
+            <p><strong>Magisterio de la Iglesia sobre Mateo 9,10-13</strong><br><br>
+
+<ol>
+  <li><b>Concilio Vaticano II – <i>Gaudium et Spes</i>, 22:</b><br>
+  “El Hijo de Dios, con su encarnación, se ha unido, en cierto modo, con todo hombre.<br>
+  Trabajó con manos de hombre, pensó con inteligencia de hombre, obró con voluntad de hombre, amó con corazón de hombre.<br>
+  Nacido de María Virgen, se hizo verdaderamente uno de nosotros, en todo semejante a nosotros excepto en el pecado.”<br>
+  <i>(Esta cita ilumina el sentido de Jesús acercándose a los pecadores: Él se hace solidario con la humanidad para sanarla desde dentro.)</i><br></li>
+
+  <li><b>Catecismo de la Iglesia Católica, n. 545:</b><br>
+  “Jesús invita a los pecadores al banquete del Reino: ‘No he venido a llamar a los justos, sino a los pecadores’ (Mt 9,13).<br>
+  Los invita a la conversión, sin la cual no se puede entrar en el Reino, pero les muestra, con su palabra y su ejemplo, la misericordia infinita del Padre.”<br></li>
+
+  <li><b>Catecismo de la Iglesia Católica, n. 210:</b><br>
+  “Jesús revela que Dios es ‘rico en misericordia’.<br>
+  En Él, la compasión divina alcanza su plenitud: Él no solo perdona, sino que cura y restablece la comunión perdida por el pecado.”<br></li>
+
+  <li><b>Benedicto XVI – <i>Deus Caritas Est</i>, 12:</b><br>
+  “En Jesús, el amor de Dios se hace visible. Él busca a los pecadores, los llama amigos y se sienta a la mesa con ellos.<br>
+  De este modo muestra que el amor auténtico no se separa del hombre en su miseria, sino que lo eleva y lo transforma desde dentro.”<br></li>
+
+  <li><b>Papa Francisco – <i>Misericordiae Vultus</i>, 3:</b><br>
+  “Jesucristo es el rostro de la misericordia del Padre.<br>
+  Todo en Él habla de misericordia; nada en Él es falto de compasión.<br>
+  Su persona no es otra cosa que amor hecho visible y tangible.”<br></li>
+
+  <li><b>Papa Francisco – <i>Evangelii Gaudium</i>, 24:</b><br>
+  “La Iglesia está llamada a ser siempre la casa abierta del Padre.<br>
+  Uno de los signos concretos de esa apertura es que en nuestras comunidades haya lugar para todos, especialmente para los que están heridos o alejados.”<br></li>
+</ol>
+</p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
