--- a/ecclesia/latin/index.html
+++ b/ecclesia/latin/index.html
@@ -37,7 +37,7 @@
           <li class="li">
             <a href="./Nobilis.Phrases.html">FRASES DE SANTOS </a>
           </li>
-          <li class="li"><a href="./saludos.html">01 SALUDOS</a></li>
+          <li class="li"><a href="./dicere.html">DISCERE</a></li>
           <li class="li"><a href="./numeracion.html">02 MATEMÁTICAS, +MESES</a></li>
           <li class="li"><a href=""></a></li>
           <li class="li"><a href=""></a></li>
