--- a/ecclesia/oracion/CastilloInterior.html
+++ b/ecclesia/oracion/CastilloInterior.html
@@ -1644,6 +1644,57 @@ El enemigo nos dará cien verdades si nos puede hacer creer una sola mentira.</l
           </ol>
         </details></li>
         <!-- ++++++++++++++++++++++++++++++ -->
+         <H2>FIAT VOLUNTAS TUA</H2>
+        <li><details class="select">
+          <summary></summary>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ol>
+        </details></li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li><details class="select">
+          <summary></summary>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ol>
+        </details></li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li><details class="select">
+          <summary></summary>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ol>
+        </details></li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li><details class="select">
+          <summary></summary>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ol>
+        </details></li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li><details class="select">
+          <summary></summary>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ol>
+        </details></li>
+        <!-- ++++++++++++++++++++++++++++++ -->
         
       </ol>
       <!-- ////////////////////////////////// -->
